# rust_rocket_hb_templates

./: Cargo.toml  Rocket.toml
src/: main.rs
src/templates/: index.hbs
