[package]
name = "hb_templates"
version = "0.1.0"
authors = ["Matt Hagner <web@matthagner.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = { version="1.0.90", features = [ "derive" ] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates", "json"]
